# cterm

./: Cargo.toml  README.md
config/: sticky_tabs_example.toml
crates/cterm-app/: Cargo.toml
crates/cterm-app/src/: config.rs  daemon_reconnect.rs  daemon_session.rs  lib.rs
crates/cterm-app/src/unixshells/: api_client.rs  auth.rs  device_service.rs  mod.rs  types.rs
crates/cterm-client/src/: connection.rs  remote_manager.rs  session.rs  socket.rs
crates/cterm-cocoa/: Cargo.toml
crates/cterm-cocoa/src/: app.rs  cg_renderer.rs  menu.rs  remotes_dialog.rs  tab_templates.rs  terminal_view.rs  unixshells_dialog.rs  window.rs
crates/cterm-core/src/: lib.rs  parser.rs  screen.rs  term.rs
crates/cterm-gtk/: Cargo.toml
crates/cterm-gtk/src/: app.rs  dialogs.rs  lib.rs  menu.rs  remotes_dialog.rs  session_dialog.rs  tab_bar.rs  tab_templates_dialog.rs  terminal_widget.rs  unixshells_dialog.rs  upgrade_receiver.rs  window.rs
crates/cterm-headless/: Cargo.toml
crates/cterm-headless/src/: cli.rs  lib.rs  main.rs  relaunch.rs  server.rs  service.rs
crates/cterm-headless/src/bridge/: reader.rs
crates/cterm-headless/src/session/: manager.rs  state.rs
crates/cterm-mosh/src/: lib.rs  session.rs  ssh_launch.rs
crates/cterm-proto/: Cargo.toml  build.rs
crates/cterm-proto/proto/: terminal.proto
crates/cterm-proto/src/: lib.rs
crates/cterm-proto/src/convert/: color.rs  events.rs  key.rs  mod.rs  screen.rs
crates/cterm-win32/: Cargo.toml
crates/cterm-win32/src/: lib.rs  menu.rs  remotes_dialog.rs  session_dialog.rs  templates_dialog.rs  terminal_canvas.rs  unixshells_dialog.rs  upgrade_receiver.rs  window.rs
