[package]
name = "cterm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[[bin]]
name = "cterm"
path = "src/main.rs"

[dependencies]
# Platform-specific UI backends
[target.'cfg(target_os = "macos")'.dependencies]
cterm-cocoa = { path = "crates/cterm-cocoa" }

[target.'cfg(all(not(target_os = "macos"), not(target_os = "windows")))'.dependencies]
cterm-gtk = { path = "crates/cterm-gtk", features = ["adwaita"] }

[target.'cfg(target_os = "windows")'.dependencies]
cterm-win32 = { path = "crates/cterm-win32" }

[workspace]
resolver = "2"
members = [
    "crates/cterm-core",
    "crates/cterm-ui",
    "crates/cterm-app",
    "crates/cterm-proto",
    "crates/cterm-client",
    "crates/cterm-gtk",
    "crates/cterm-cocoa",
    "crates/cterm-win32",
    "crates/cterm-headless",
]
default-members = [".", "crates/cterm-headless"]

[workspace.package]
version = "0.0.16"
edition = "2021"
authors = ["cterm contributors"]
license = "MIT"
repository = "https://github.com/magicaltux/cterm"
description = "A high-performance, customizable terminal emulator"

[workspace.dependencies]
# Core dependencies
bitflags = { version = "2", features = ["serde"] }
unicode-width = "0.2"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
parking_lot = "0.12"

# Parser
vte = "0.13"

# General
anyhow = "1"

# Config
serde = { version = "1", features = ["derive", "rc"] }
toml = "0.8"
directories = "6"

# Encoding
base64 = "0.22"

# Search
regex = "1"

# Image decoding
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Upgrade system
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
sha2 = "0.10"
semver = "1"
bincode = "1"
libc = "0.2"
serde_json = "1"
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }
tar = "0.4"
flate2 = "1"

# gRPC
tower = "0.4"
hyper-util = { version = "0.1", features = ["tokio"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio-stream = { version = "0.1", features = ["net"] }
uuid = { version = "1", features = ["v4"] }

# GTK4
gtk4 = "0.9"
libadwaita = "0.7"
glib = "0.20"
gio = "0.20"
gdk4 = "0.9"
cairo-rs = { version = "0.20", features = ["png"] }
pango = "0.20"
pangocairo = "0.20"

# macOS native (objc2 ecosystem)
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = "0.3"
objc2-metal = "0.3"
objc2-core-graphics = "0.3"
objc2-quartz-core = "0.3"
block2 = "0.6"
dispatch2 = "0.3"

# Internal crates
cterm-core = { path = "crates/cterm-core" }
cterm-ui = { path = "crates/cterm-ui" }
cterm-app = { path = "crates/cterm-app" }
cterm-proto = { path = "crates/cterm-proto" }
cterm-client = { path = "crates/cterm-client" }
cterm-headless = { path = "crates/cterm-headless" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
