[package]
name = "cterm-app"
version.workspace = true
edition.workspace = true
description = "Application logic for cterm"

[dependencies]
cterm-core.workspace = true
cterm-client.workspace = true
cterm-proto.workspace = true
cterm-ui.workspace = true
base64.workspace = true
serde.workspace = true
toml.workspace = true
directories.workspace = true
log.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
reqwest.workspace = true
sha2.workspace = true
semver.workspace = true
bincode.workspace = true
serde_json.workspace = true
futures-util.workspace = true
env_logger.workspace = true
tar.workspace = true
flate2.workspace = true
anyhow.workspace = true
ssh-key.workspace = true
ed25519-dalek.workspace = true
hostname = "0.4"

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "handleapi",
    "namedpipeapi",
    "processthreadsapi",
    "minwinbase",
    "winbase",
    "winnt",
] }

[dev-dependencies]
tempfile = "3"
