[package]
name = "cterm-cocoa"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Native macOS UI for cterm using AppKit and CoreGraphics"

[dependencies]
# Internal crates
cterm-core.workspace = true
cterm-client.workspace = true
cterm-proto.workspace = true
cterm-ui.workspace = true
cterm-app.workspace = true

# Logging
log.workspace = true
env_logger.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Async runtime
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true

# objc2 ecosystem for macOS
objc2.workspace = true
objc2-foundation.workspace = true
objc2-app-kit.workspace = true
objc2-core-graphics.workspace = true
block2.workspace = true
dispatch2.workspace = true

# Synchronization
parking_lot.workspace = true

# Image encoding for save
image.workspace = true

# CLI parsing
clap.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
libc.workspace = true
