[package]
name = "cterm-gtk"
version.workspace = true
edition.workspace = true
description = "GTK4 UI implementation for cterm"

[lib]
name = "cterm_gtk"
path = "src/lib.rs"

[features]
default = []
adwaita = ["dep:libadwaita"]

[dependencies]
cterm-core.workspace = true
cterm-client.workspace = true
cterm-proto.workspace = true
cterm-ui.workspace = true
cterm-app.workspace = true
gtk4.workspace = true
libadwaita = { workspace = true, optional = true }
glib.workspace = true
gio.workspace = true
gdk4.workspace = true
cairo-rs.workspace = true
pango.workspace = true
pangocairo.workspace = true
log.workspace = true
env_logger.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
parking_lot.workspace = true
clap.workspace = true
bincode.workspace = true
open = "5"

[target.'cfg(unix)'.dependencies]
libc.workspace = true
