[package]
name = "cterm-headless"
version.workspace = true
edition.workspace = true
description = "Headless terminal daemon with gRPC API for cterm"

[[bin]]
name = "ctermd"
path = "src/main.rs"

[dependencies]
cterm-core.workspace = true
cterm-proto.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
tokio.workspace = true
tokio-stream = { workspace = true, features = ["sync"] }
parking_lot.workspace = true
thiserror.workspace = true
log.workspace = true
env_logger.workspace = true
anyhow.workspace = true
clap.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
