[package]
name = "cterm-proto"
version.workspace = true
edition.workspace = true
description = "Protobuf definitions and type conversions for cterm gRPC protocol"

[dependencies]
cterm-core.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true

[build-dependencies]
tonic-build = "0.12"
