[package]
name = "cterm-win32"
version.workspace = true
edition.workspace = true
description = "Native Windows UI implementation for cterm"

[lib]
name = "cterm_win32"
path = "src/lib.rs"

[dependencies]
cterm-core.workspace = true
cterm-ui.workspace = true
cterm-app.workspace = true
cterm-client.workspace = true
cterm-proto.workspace = true

# Windows GUI
native-windows-gui = "1.0"
native-windows-derive = "1.0"

# Windows APIs for Direct2D, DirectWrite, etc.
windows = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_UI_Controls",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Com",
    "Win32_Security",
    "Win32_Globalization",
]}

# Common dependencies
parking_lot.workspace = true
log.workspace = true
env_logger.workspace = true
clap.workspace = true
tokio.workspace = true
futures.workspace = true
bincode.workspace = true
bitflags.workspace = true

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "consoleapi",
    "handleapi",
    "namedpipeapi",
    "processthreadsapi",
    "synchapi",
    "winbase",
    "wincon",
    "winnt",
    "winerror",
    "winuser",
    "wingdi",
]}

[dev-dependencies]
tempfile = "3"
image = { version = "0.25", default-features = false, features = ["png"] }
